# Cornpiler

./: CMakeLists.txt  ExampleScript.txt  LRTable.c  LRTable.h  Questions for michael.txt  README.md  a.out  cornpiler  grammer.txt  lexer.c  lexer.h  main.c  output  parseTree.c  parseTree.h  parser.c  parser.h  parser.output  parser_types.h  stack.c  stack.h  state.h  tempCodeRunnerFile.c  todo.txt  token.h  util.c  util.h
Lexer/C_Files/: lexer.c
Lexer/H_Files/: lexer.h  token.h
Misc/C_Files/: errorHandler.c  main.c  util.c
Misc/H_Files/: errorHandler.h  global.h  util.h
Parser/C_Files/: LRTable.c  parseTree.c  parser.c  stack.c
Parser/H_Files/: LRTable.h  parseTree.h  parser.h  parser_types.h  stack.h
cornpiler.dSYM/Contents/: Info.plist
cornpiler.dSYM/Contents/Resources/DWARF/: cornpiler
cornpiler.dSYM/Contents/Resources/Relocations/aarch64/: cornpiler.yml
documentation/: .$Lexer.drawio.bkp  .$Lexer.drawio.dtmp  Lexer.drawio  Questions for michael.txt  Top_Down_Level_Design.drawio  debugging.txt  example_diagram_for_dfa_demonstration.drawio  gpt grammer.txt  grammer.txt  todo.txt
generate_parse_table/: generate_parse_table.c  parser.output  parser.tab.c  parser.tab.h  parser.y  terminal commands.txt
output.dSYM/Contents/Resources/DWARF/: output
